--- a/Web.Statu/Views/Insolvence/Index.cshtml
+++ b/Web.Statu/Views/Insolvence/Index.cshtml
@@ -39,7 +39,7 @@
 <script type="text/javascript" charset="utf8" src="//cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
 
 
-@Html.Action("CachedAction_Child_4H", new { model = Model, NameOfView = "Index.Content" })
+@Html.Action("CachedAction_Child_48H", new { model = Model, NameOfView = "Index.Content" })
 
 <div class="row">
 
@@ -102,6 +102,13 @@
 
 
 
+<div class="bs-callout bs-callout-primary small">
+    <h4>Politici a jejich vazby na firmy</h4>
+    <p>
+        Pro nás relevantní vazba politika na firmu je, že daná osoba byla (spolu)majitelem firmy anebo působila ve statutárním orgánu společnosti v době, 
+        kdy byla zahájena insolvence přímo na firmu, kde osoba působila, anebo na libovolnou firmu, kde byl tento vztah nepřímý (tzn. firma s politikem vlastnila firmu B, ta firmu C, ktera spadla do insolvence)
+    </p>
+</div>
 
 
 
