--- a/Web.Statu/Views/Insolvence/Dokumenty.cshtml
+++ b/Web.Statu/Views/Insolvence/Dokumenty.cshtml
@@ -35,9 +35,10 @@
 		Podrobné informace o insolvencích jsou dostupné pouze registrovaným uživatelům Hlídače Státu.
 		<b>Registrace je zdarma a je velmi jednoduchá</b>. Stačí vám pouze platný email.
 	</p>
-	<p>Pokud jste již zaregistrováni, <a href="/account/Login?returnUrl=@(this.Url.Action())" class="btn btn-default">zalogujte se</a>. </p>
+	<p>Pokud jste již zaregistrováni, <a  onclick="ga('send', 'event', 'loginBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)#PristupOmezen'); return true;"href="/account/Login?returnUrl=@(this.Url.Action())" class="btn btn-default">zalogujte se</a>. </p>
 	<p>
-		<a href="/account/Register?returnUrl=@(this.Url.Action())" class="btn btn-primary">Zaregistrovat se</a>
+		<a  onclick="ga('send', 'event', 'registerBtn', 'click','@this.Request.Url.GetComponents(UriComponents.Path, UriFormat.Unescaped)#PristupOmezen'); return true;"
+           href="/account/Register?returnUrl=@(this.Url.Action())" class="btn btn-primary">Zaregistrovat se</a>
 	</p>
 	<script>
 		$(function () {
