--- a/Web.Statu/Views/Account/Login.cshtml
+++ b/Web.Statu/Views/Account/Login.cshtml
@@ -1,5 +1,7 @@
 ﻿@model LoginViewModel
 
+@using HlidacStatu.Web.Framework;
+
 @using HlidacStatu.Web.Models
 @{
     ViewBag.Title = "Přihlášení";
@@ -50,7 +52,7 @@
                     <div class="col-sm-offset-2 col-sm-10">
                         <input type="submit" value="Přihlásit se do Hlídače smluv" class="btn btn-primary" />
                         <a class="btn btn-default" href="@Url.Action("ForgotPassword")" role="button">Nepamatuji si heslo</a>
-                        <input type="text" name="@(HlidacStatu.Web.Controllers.AccountController.FormBotHoneyPot_Default)" id="@(HlidacStatu.Web.Controllers.AccountController.FormBotHoneyPot_Default)" value="" placeholder="Your Zip code" />
+                        @Html.HoneyPotInput()
 
                     </div>
                 </div>
@@ -67,20 +69,4 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script>
-    $(function () {
-        $('#@(HlidacStatu.Web.Controllers.AccountController.FormBotHoneyPot_Default)').css({ "font-size": "1pt", "color": "white", "width": "1px", "border": "none"});
-    });
-
-    </script>
-    <noscript>
-        <style>
-            #zip {
-                font-size: 1pt;
-                color: white;
-                width: 1px;
-                border: none;
-            }
-        </style>
-    </noscript>
 }
