--- a/Web.Statu/Views/Account/ResetPassword.cshtml
+++ b/Web.Statu/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,5 @@
 ﻿@model HlidacStatu.Web.Models.ResetPasswordViewModel
+@using HlidacStatu.Web.Framework;
 @{
     ViewBag.Title = "Změna přístupového hesla";
 }
@@ -33,28 +34,11 @@
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" class="btn btn-default" value="Reset" />
-            <input type="text" name="@(HlidacStatu.Web.Controllers.AccountController.FormBotHoneyPot_Default)" id="@(HlidacStatu.Web.Controllers.AccountController.FormBotHoneyPot_Default)" value="" placeholder="Your Zip code" />
+            @Html.HoneyPotInput()
         </div>
     </div>
 }
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-    <script>
-    $(function () {
-        $('#@(HlidacStatu.Web.Controllers.AccountController.FormBotHoneyPot_Default)').css({ "font-size": "1pt", "color": "white", "width": "1px", "border": "none"});
-    });
-
-    </script>
-    <noscript>
-        <style>
-            #zip {
-                font-size: 1pt;
-                color: white;
-                width: 1px;
-                border: none;
-            }
-        </style>
-    </noscript>
-
 }
